--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,18 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540841.md#1" target="_blank">川普联大促宗教自由 法轮功代表获邀出席</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540841.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1KK0WJ-150x120.jpg" align ="left"></a>周一（9月23日）上午，川普（特朗普）总统在联合国发表宗教自由演讲。川普强调，没有任何权利比宗教信仰权利对一个繁荣稳定的社会更为根本。美国将永远是全球宗教受迫害人士的传声筒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 11:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539844.md#1" target="_blank">美国国会明春为华裔二战老兵颁金章</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539844.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/f9a19101e8918f7cf61d0d77b174c18a-150x120.jpg" align ="left"></a>美国总统川普去年12月签署“二战华裔老兵国会金质奖章法案”，国会将于明年春天举行金章授予仪式，二战健在老兵或其遗孀、子女可在仪式上获得金章。该项目重要推动人陈绍章和同源会21日呼吁，华裔二战老兵或其近亲到WWW.CAWW2.ORG网站注册，让老兵获得属于他们的荣誉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 11:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540988.md#1" target="_blank">贸谈风向标 美官方代表团将赴华谈芬太尼</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540988.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1025079030-600x400-150x120.jpg" align ="left"></a>芬太尼一直是中美贸易谈判的风险标。美中刚刚结束新一轮贸易谈判，白宫就随后宣布，近期将有国家毒品官员率团访华、强调防止芬太尼等合成类阿片毒品输美。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 11:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540907.md#1" target="_blank">全球最老牌旅行社破产 英二战后大“撤侨”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540907.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1176561060-150x120.jpg" align ="left"></a>9月23日，全球历史最悠久的英国老牌旅行社 Thomas Cook 倒闭，造成全球60万名游客滞留、2万名员工失业。中国复星集团拥有其约18%的股份，Thomas Cook 的破产导致复兴股价暴跌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 10:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539587.md#1" target="_blank">【翻墙必看】中共在香港制造的恐怖无处不在</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909220238211366-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.没有戒严的戒严 中共政法委做法在香港实施
+香港“反送中”运动持续了三个多月，随着当局镇压的升级，“7·21元朗警黑合作”、“8·31太子站警察无差别袭击市民”等邪恶手段超出了香港民众的想像，一次次刷新香港人对中共的认知，在这个过程中，市民清晰地看到中共政法委逐渐从阴暗之处跳到台面上，直接操控香港警察，正实施着.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 9:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540600.md#1" target="_blank">中共质检总局前副局长魏传忠被逮捕</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540600.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wei-chuanzhong-VCG11455125981-1-150x120.jpg" align ="left"></a>日前，已退休5年的中共国家质检总局（简称质检总局）前副局长魏传忠被逮捕，并被起诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 8:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540410.md#1" target="_blank">十一临近 湘维权人士王美余突然死于看守所</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540410.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/page-4-150x120.jpg" align ="left"></a>9月23日早上，湖南公民王美余的妻子曹曙霞突然收到衡阳看守所政委的通知，称王美余在看守所死亡。曹曙霞指，王美余被他们打死了，妈妈肖湘荣听到噩耗悲痛得晕厥过去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540184.md#1" target="_blank">大陆低邮费致德国网商年损失至少50亿欧元</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540184.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/1401241125362546-600x400-150x120.jpg" align ="left"></a>德国一行业联合会的统计，中共的不公平竞争导致德国仅电子产品业一年的损失就高达50亿欧元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540656.md#1" target="_blank">湖南前副省长向力力被逮捕 曾是秦光荣下属</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/xiang-lili-1-150x120.jpg" align ="left"></a>9月23日，中共湖南省前副省长向力力涉嫌受贿案移送检方审查起诉，向力力被逮捕。向力力曾是云南省委前书记秦光荣的老下属。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:33 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540407.md#1" target="_blank">贸易战前途不明 A股三大股指齐跌</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540407.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1507281229382584-150x120.jpg" align ="left"></a>9月23日，受美中贸易战前途不明影响，A股三大股指沪指、深成指、创业板齐跌，其中沪指下跌近1%，跌下3000点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540205.md#1" target="_blank">程晓容：9月新闻透警讯 中共动手侵吞民企</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540205.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/20171203-nina-Taipei-102-150x120.jpg" align ="left"></a>马云退场等一连串商界新闻是对所有人的警钟——中共漠视人的尊严，无视法治，践踏公平道义。与它共舞，必然在劫难逃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 6:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540476.md#1" target="_blank">报告：邻国与美国制衡 中共难以武统台湾</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-166772581-150x120.jpg" align ="left"></a>尽管中共不断扬言不放弃以武力统一台湾，但美国学者的研究报告显示，中共的军力不足以击败邻国，甚至无法征服台湾。美军只需提供适度协助给台湾，中共的侵略行动就会受挫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 5:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540358.md#1" target="_blank">专家：多方证据显示 中共在贸易战中已败北</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/gettyimages-1143921532-594x594-594x400-1-150x120.jpg" align ="left"></a>9月22日，福克斯新闻刊登了海伦·罗利（Helen Raleigh）的评论，她分析，多方证据显示，中共已经在美中贸易战中失败。罗利是《联邦主义者》的资深撰稿人、咨询公司Red Meadow Advisors的所有人、科罗拉多州百年学院的移民政策研究员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 5:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539903.md#1" target="_blank">美司法部警告：更多商业机密窃案指向中共</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539903.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-1155632155-150x120.jpg" align ="left"></a>美中贸易战已经持续1年多，其中美国对中共的一项诉求是停止盗窃知识产权。周六（9月21日），美国司法部向公司发出警告，中共盗窃商业机密的行为在增加，需要加强防御。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 5:02 PM							</td></tr>
@@ -14,20 +28,9 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539304.md#1" target="_blank">为何总爱自导自演？徐峥的答案笑翻众人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539304.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509141551211693-150x120.jpg" align ="left"></a>大都饰演喜剧角色的大陆男星徐峥，近期受邀参加综艺节目《脱口秀大会2》。在9月22日播出的节目中，他不仅坦承了自己对于喜剧演员的理解，而且首次披露自己为何总爱自导自演。其答案笑翻众人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539367.md#1" target="_blank">范冰冰自拍影片：经历了想不到的困难与痛苦</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539367.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/GettyImages-688729168-150x120.jpg" align ="left"></a>大陆女星范冰冰9月16日低调度过38岁生日，沉默几天之后，她在微博粉丝专页贴出自拍影片，首次透露“经历了可能大家想不到的困难和痛苦”，并感谢粉丝对的支持和鼓励。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539299.md#1" target="_blank">蓬佩奥要各国勿听令中共 停止遣返维族人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539299.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1153801487-1-150x120.jpg" align ="left"></a>美国国务卿蓬佩奥要求中亚各国不要再听令中共，向中国遣返维吾尔人。一旦被遣返，他们将受到中共迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 4:05 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539220.md#1" target="_blank">叶剑英之子叶选平追悼仪式现场事先曝光</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/7e39ab81b6e2c10aed9a2f09b26077a4-150x120.png" align ="left"></a>9月23日中共已古的元老叶剑英的长子、中共全国政协副主席、前广东省省长叶选平追悼会将于9月23日在广州殡仪馆举行，大纪元事先获得追悼会现场视频，显示中共各派都有送花圈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 3:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538985.md#1" target="_blank">中共进行第3次阅兵彩排 北京进入临战状态</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538985.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>中共十一大阅兵逼近之际，大陆各地陆续进入“临战”状态，而作为首都的北京更是风声鹤唳、草木皆兵。法媒批到，中共对北京的管制，如同法西斯式的管理方式。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 2:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539142.md#1" target="_blank">湖南货车冲入集市碾人 数十人死伤（慎入）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-27-150x120.jpg" align ="left"></a>9月22日，湖南省湘潭市一辆货车撞上赶集人群，目前已致10人死亡、16人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 2:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539182.md#1" target="_blank">中国游客犹他州出车祸 4遇难者来自上海</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539182.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-589477624-150x120.jpg" align ="left"></a>上周五，一组中国游客搭乘的大巴在美国犹他州发生重大车祸，造成4人遇难。周六（9月22日），当局确定四名遇难者的身份，均来自上海。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 1:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539034.md#1" target="_blank">共享单车衰落后 大陆自行车厂挣扎求生</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/VCG111100263731-150x120.jpg" align ="left"></a>近日，身系千万人押金的ofo共享单车，已悄悄搬离了其“发迹之地”北京中关村。随着共享单车的衰落，令自行车供应商跌落谷底，现在幸存的厂家在挣扎求生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 1:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538883.md#1" target="_blank">欧洲移植大会 中共掠夺器官再成焦点</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538883.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-2-150x120.jpeg" align ="left"></a>2019年9月15至18日，欧洲器官移植国际会议在丹麦首都哥本哈根举行。在此次大会上，中共的器官滥用行为和活摘话题再次引起业界专家的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539025.md#1" target="_blank">网传：退伍军人将在“十一”北京维权</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539025.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/89fa644913a515970f02fd82fc4770f5-150x120.jpg" align ="left"></a>近日，有多方消息称，退伍军人将在“十一”维权，联合现役军人齐聚北京，并呼吁所有维权群体能够一起上街，推翻中共政权！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:28 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538913.md#1" target="_blank">十一前夕 东莞市幼儿园168名幼儿食物中毒</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/GettyImages-878271178-150x120.jpg" align ="left"></a>在中共当局加大“维稳”力度为迎接“十一”大阅兵的前夕，广东省东莞市发生一起重大的幼儿园食品安全事故。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 11:11 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538406.md#1" target="_blank">经营艰难 大陆多家房企分拆物业上市</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538406.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1411010353442663-600x400-150x120.jpg" align ="left"></a>保利地产全资子公司保利物业发展股份有限公司（保利物业）9月17日发布公告称，已收到中共证监会核准境外上市的批复，证监会核准保利物业发行不超过1.53亿股境外上市外资股。保利物业已于8月6日向港交所递交上市申请。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 10:57 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540478.md#1" target="_blank">广西男生被同学从四楼扔下 多脏器严重受损</a><br></h3>9月16日，广西河池都安瑶族自治县某中学，一名身穿黑色上衣的男生被另一名身材高大的男同学从四楼的走廊内抱起扔出楼外。被扔出楼外的男生受伤严重，全身多脏器严重受损，目前仍在重症监护室治疗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 5:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539988.md#1" target="_blank">内蒙古两厅官被查处 皆涉犯罪</a><br></h3>9月23日，两名内蒙古自治区官员被查处，其中退休官员苏建荣被开除中共党籍，另一官员被双开；两人皆涉犯罪被移送起诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 4:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538896.md#1" target="_blank">中共炫耀中所建交 分析:台湾的自由最具价值</a><br></h3>9月22日，太平洋所罗门群岛与台湾中断外交关系后，与中共建交。中共喉舌以此作为自己70年建政的政绩并唱衰台湾，中共外长还上升必定统一台湾的高度。网友纷纷反击称台湾免签证国家有一百多个，中共党国只有寥寥数十个不起眼的国家，免签证多才是实力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 1:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539939.md#1" target="_blank">每日三退声明精选（2019/09/22）</a><br></h3>作为一个有良知的人，在学生时期内心的迷蒙和资讯的封闭让我不知道这是怎样的一个组织，在老师的强烈要求下加入共青团(不加入共青团会被老师孤立)，然而在学校中，政治和学习挂钩这么深真的是万分不能让人接受。这一事实令我痛苦不已，从入团那天起就对自己产生了深深的质疑，在对于加入与否这件事上不能自主选择，那么加入真的是一件对的事吗？从那个时候起就对政治制度有了一些侧面的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539281.md#1" target="_blank">外媒：中共打压新疆的政策已在宁夏施行</a><br></h3>继新疆维吾尔族自治区后，宁夏回族自治区似乎也成中共政府打击穆斯林的目标，一名当地伊玛目认为“新疆政策已经在这里施行了，至少正朝这个方向前进中”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 3:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538875.md#1" target="_blank">9月初 哈尔滨多名法轮功学员遭绑架</a><br></h3>9月11日，哈尔滨铁路公安局直属公安处绑架了董文秀、王淑兰、王玉荣、宛芳、张海燕等多名法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 1:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_4.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
