--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -25,6 +25,7 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/21/n11468709.md#1" target="_blank">公主异想天开 欲用水泡作花鬘 智慧老匠如是说</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/21/n11468709.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1803122327152483-150x120.jpg" align ="left"></a>一天，天降大雨，雨水洒落在大地，形成美丽的水泡。公主看见水泡此起彼落，和着静籁的雨声，那场面格外迷人。公主呆呆地看着水泡，心中甚是迷恋。于是，她对国王说：“父王，我想用雨水的水泡穿成美丽的花鬘。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 5:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/6/23/n8028273.md#1" target="_blank">【文史】明成祖迁都北京 入主紫禁城第一人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/6/23/n8028273.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/06/1606021506462483-150x120.jpg" align ="left"></a>明成祖朱棣登基后不久，决定将北平改为北京，并迁都北京。这再次体现朱棣的雄才大略，迁都北京不仅仅是因为北京曾是他做燕王时期的封地，可以远离建文帝的旧势力，更重要的是他认为北京山川形胜便于就近调动军队，方便指挥，可以防范元代蒙古残余势力，控制东北，并制天下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 4:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511323.md#1" target="_blank">5个步骤让你重新振作起来学习</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511323.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_214137573_Subscription_L-150x120.jpg" align ="left"></a>这是一个无聊的下午。你从学校回来已经很累了，只想窝在沙发上看视频吃零食。但你知道自己应该学习，可就是一点都不想动。也许你有一个项目就要到提交的日期了，有一篇文章要写，还要为一场测验做复习准备。那么，应该如何避免拖延，重新让自己振作起来呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 3:22 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/9/n11509959.md#1" target="_blank">江城子．佳节思亲</a><br></h3> 适逢花好月圆时。 念怀悲， 愿风随。 天涯玉札， 星语彩云追。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月13日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11514656.md#1" target="_blank">江城子．秋声赋</a><br></h3>金阳秋露唤花回， 果盈垂，翠叶肥。 堤柳风韵，幕幕画中随。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月12日 9:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11514356.md#1" target="_blank">台湾古典诗：虎山秋晓（二）</a><br></h3> 虎山踏露倚云明，四野含烟爽气清； 一杵万钧鸡破晓，岚光曙色荡吟情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月12日 3:45 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/11/n11514584.md#1" target="_blank">诗歌：以法为师扬归帆</a><br></h3>千年皓月如明鉴， 照彻人间悲与欢。 逆天叛道权命短 行善积德福寿绵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 11:36 PM			</td></tr>
@@ -35,6 +36,5 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511981.md#1" target="_blank">一七令．传统美德</a><br></h3> 芳。 聪慧，端庄。 贤淑美，巧梳妆。 温文尔雅，落落大方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 8:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/9/n11509957.md#1" target="_blank">江城子．醒世真言</a><br></h3>末世红权罪空前。 祸蛮缠，万恶源。 天灭中共，远恶下红船。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月11日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/10/n11511946.md#1" target="_blank">诗歌：秋游</a><br></h3>一片枫红一片秋 一叶枯黄一叶愁 一阵秋风一雨后 一路虹彩一路游......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 8:19 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/9/n11509540.md#1" target="_blank">一七令．游西湖</a><br></h3>游。 美丽，杭州。 雷峰塔，小瀛洲。 三潭印月，花港鱼稠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月10日 3:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/news2007_5.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_5.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/news2007_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_5.htm">http://www.epochtimes.com/gb/news2007_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
