--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -27,7 +27,8 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531293.md#1" target="_blank">程晓容：香港三项活动取消 中共十一添堵</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/20190726-HUAMING-HONGKONG-03-150x120.jpg" align ="left"></a>三个活动在香港被取消，发出同一个信号：中共自讨没趣，亲共者自取其辱。在香港风暴中，正邪分明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 6:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532002.md#1" target="_blank">陈思敏：中共“十一”猪荒危机难过</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11532002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/20150064-150x120.jpg" align ="left"></a>中共文宣系统去年就开始宣传将以“经济成果”庆祝建政70年，但今年Q2的GDP创1992年Q1以来最低增速，更有始料未及的猪荒危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 5:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531935.md#1" target="_blank">横河：重重危机之下中共能否摆脱70年大限魔咒</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531935.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/henhe1-600x400-1-1-150x120.jpg" align ="left"></a>今天是中秋佳节，我们首先祝听众朋友们中秋快乐、阖家团圆。接下来的10月1日是中共篡政70周年的纪念，会在这一天营造一个普天同庆的假象，中共祭出了“胡萝卜加大棒”的策略，“大棒”就是各级政府高度戒备进入临战状态，这个跟往年也差不多少；“胡萝卜”就是北京不惜降准来刺激股市，安抚股民的情绪；对外又向美国放软身段，缓和紧张气氛.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 4:08 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531858.md#1" target="_blank">觅真：阴霾散去明珠会更加灿烂辉煌！</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531858.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Screen-Shot-2019-09-18-at-3.57.34-PM-600x400-1-150x120.jpg" align ="left"></a>香港反送中运动从6月开始至今已有百日，从最初撤回送中条例、林郑下台等五大诉求，随着林郑政府瘫痪、港警的滥抓滥捕、甚至8·31太子站恐袭市民，民间的诉求已转向“驱逐共党，光复香港”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 3:31 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537669.md#1" target="_blank">李小刚：中共的反人类实验何时休？！</a><br></h3>中共为了研发脑控科技，从上世纪60年代初到现在，已经50多年了，从最初的姜堪政的思维传递实验，到文革中利用脑控设备进行政治审查，再到八、九十年代的以研究气功，特异功能和人体科学为幌子的实验，直至1996年中国加入人类脑计划至今，中共的脑控研究从来就没有停止过，但是由于中共强有力的保密工作，再加上中共不断的蓄意掩盖和歪曲.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 4:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537199.md#1" target="_blank">王赫：中共如何蚕食“战略性”民企</a><br></h3>9月10日，马云“（被）交班”。10天之内，中国互联网“双马”之另一“马”——马化腾，也不再担任腾讯征信法定代表人，并卸任执行董事。如果说“双马”相继走下前台是偶然事件，恐怕没几人相信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 9:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11536750.md#1" target="_blank">吐为快：赵家的爱国主义</a><br></h3>党家仇恨琵琶遮，常弹爱国妆颜色；
 海参冷落卖土蟾，钓岛挤爆爱国贼；
 官握令箭射政敌，党摇招牌引蜂蝶；
@@ -66,7 +67,5 @@
 善人思，
 觉醒灵魂神意随。
 心清明是非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 3:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531645.md#1" target="_blank">内地同胞致香港抗争者书</a><br></h3>2019年9月15日，人潮，人潮，还是人潮！
-黑色的人潮像开闸的洪水汹涌在铜锣湾，沸腾在湾仔；又像是无数脱缰的黑色奔马，奔腾在各条街道，奋蹄在白色烟雾和白色恐怖弥漫的金钟。我似乎看到一泻千里，向往自由大海的黑色浪花；也似乎听到了无数奔马发出的向往自由嘶吼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 3:03 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_3.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
