--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -32,7 +32,9 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/5/4/n11234376.md#1" target="_blank">【征文】文宇：科举千年兴衰录（二）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/5/4/n11234376.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/12/0912042137271734-150x120.jpg" align ="left"></a>在千年神传文化的沃土中，诞生了史上最公平的选官制——科举制。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 11:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11521007.md#1" target="_blank">陈思敏：香港后生可畏 中共不安胡扯反送中病根</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11521007.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/photo_2019-08-30_21-06-04-1-1-150x120.jpg" align ="left"></a>9月12日，中共政法委及党的喉舌《人民日报》、《新华社》忽然齐声聚焦香港楼市与房价。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 7:28 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507433.md#1" target="_blank">王赫：习近平大讲“斗争”的背后</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1139027305-150x120.jpg" align ="left"></a>9月3日，习近平在中共中央党校（国家行政学院）中青年干部培训班的开班仪式上大讲“斗争”。官媒报道显示，习近平至少五十八次提到“斗争”一词，强调领导干部要敢于“斗争”、善于“斗争”，并且面临的各种“斗争”是长期的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 6:54 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520983.md#1" target="_blank">胡少江：那些支持中国政府、反对市民示威的香港“爱国者”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/14/n11520983.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909130936422478-150x120.jpg" align ="left"></a>两位香港女士周二（10日）前往联合国人权理事会发表演说，声言是代表香港市民发声，谴责数百万的香港示威者是“暴力人士”，支持香港警察对示威者的武力镇压，其中的一位还代表共产党向世界宣传了中国的脱贫成就。有趣的是，这两位代表中国“无产阶级政党”说话的人都是香港富家千金：一位是美心集团创办人的千金；另一位则是赫赫有名的澳门赌.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 6:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/17/n11526421.md#1" target="_blank">戈壁东：中共“70周年庆”成民众灾难日</a><br></h3>还有半个月就是中共窃国70周年。9月15日，洛杉矶有一群亲共人士，在蒙特利公园再次举办升旗闹剧。照例，洛杉矶海外华人团体，会去声讨他们为利益出卖良知。其实亲共人士也知道中共的末日已近，他们应该感谢美国的自由民主，能让他们平安地在这里闹腾，而中共在其统治的国家里过“国庆”，就像在过难关，战战兢兢、如临大敌。
+
+最近传.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 10:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524312.md#1" target="_blank">金浴凤：红朝恨赋</a><br></h3>凭空坠落，遍地蒙冤，高山溅血，江海萦骨。
 首恨神佛，砸庙毁像。神龛无光，贝叶投火，和尚参军，尼姑改嫁。隐赤共而混佛协，改经义而颂邪党，妆门面而变市场。
 次恨传统，焚典销迹。先贤尸暴，孔门杏伐，侮辱斯文，揪斗大师，或灰心而沉江湖，或忍耻而度残生，或弃国而走他乡。
