--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -32,11 +32,11 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11497535.md#1" target="_blank">【命理】同年月日出生的台湾三巨公 贵命相同吗？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/4/n11497535.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1807137d5cdb85be15aef984fc47ad14-150x120.jpg" align ="left"></a>（续：【拨开迷雾】同年月日时出生的人 命运会相同吗？）
 同年月日时出生的人 命运会相同吗？
 命学中有一种称为“伤官格”类型的人，顾名思义，伤官就是伤害官星。官星，为管我者，统治我之人，即上司，上属，官员，大至统治者，政府而言。故伤官格的人，能够伤害管理、统治自己的人，多是很有才华、才气的人（女命则会是清逸、秀丽）.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 11:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/12/n11447121.md#1" target="_blank">天地清明引(45) 宫廷变－了无牵挂1</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/12/n11447121.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/04/getCollectionImage-150x120.jpg" align ="left"></a>西北黄沙帮，首领黄旗原是汉人，早年前往黄沙镇做生意时，被当地人夺了货物，妻儿惨遭杀害，自己也险些丢了性命。后来勤奋习武，跑到黄沙镇郊外的一处绿洲拉帮结伙，成立了黄沙帮，专门干些杀人越货的勾当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503792.md#1" target="_blank">千里共婵娟 古今共婵娟 说什么美好与浪漫？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/6/n11503792.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1082b159fac9ba71226680c035d2760d-150x120.jpg" align ="left"></a>“婵娟”代指什么对象呢？婵娟成了月亮的化身，是始自东坡的中秋词吗？“千里共婵娟”的诗情其来有自？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 6:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11525598.md#1" target="_blank">五律：清秋</a><br></h3> 清风输爽气， 雨过漫天晴。 锦带更怜蕊， 秋蝉犹有声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 12:17 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523544.md#1" target="_blank">诗歌：花儿与少年</a><br></h3> 芬芳并蒂花娇艳， 丽质天资雨中开。 拈指飞鹰入幻境， 少年一笑春风来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 12:07 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11525559.md#1" target="_blank">七绝：一穗芦花</a><br></h3>一穗芦花一穗秋， 也无靓丽也无求。 身姿秀直身姿瘦， 不惧风霜染白头！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 10:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523547.md#1" target="_blank">诗歌：月满中秋</a><br></h3>月满中秋神龙舞， 嫦娥奔月又几时， 五千文化何所指， 闹市寻人看谁迷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 12:16 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523048.md#1" target="_blank">作文选登：家乡美食</a><br></h3>每个地方都有特色小吃，等着我们耐心挖出宝物，体会美食的奥妙。我想要多走走看看，打造出专属菜单，更欢迎大家来我的家乡试试口味，保证不虚此行喔！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 6:28 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11518770.md#1" target="_blank">一七令．彩云之南</a><br></h3> 滇。 七彩，云南。 游洱海，看苍山。 观丽江水，赏蝴蝶泉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 12:05 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/13/n11518767.md#1" target="_blank">一七令．秋收图</a><br></h3>粮。 遍地，金黄。 瓜如蜜，果飘香。 葡萄串串，莲藕满塘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/news2007_4.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_4.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/news2007_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_4.htm">http://www.epochtimes.com/gb/news2007_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
